# sos

./: .appveyor.windows.yml  .appveyor.yml  .coveragerc  .dot  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .travis.yml  .travis_all.yml  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  appveyor.yml  appvoyer.yml  imports.py  invoke.yaml  process.sh  pyproject.toml  pyproject.toml.flit  requirements_dev.txt  run_tests.py  setup.py  sos  sos-runner  tasks.py
.github/linters/: .python-lint  .python-lint.swl  .python-lint.swm  .python-lint.swn  .python-lint.swo
.github/workflows/: pylint.yml  pytest.yml
development/: release  release.sos  update_docker.sh  update_ec2_docker.sh
development/doc/: cmd_status.dot  job_queue.dot
development/docker-base/: Dockerfile  README.md
development/docker-convert/: Dockerfile
development/docker-demo/: Dockerfile
development/docker-notebook/: Dockerfile  Dockerfile.in
development/examples/: DEG_list.xlsx  HomePage_Example_2B.ipynb  HomePage_Example_3A.ipynb  HomePage_Example_3B.ipynb  Video-Overview-of-SoS-Notebook.ipynb  Video-Script-Format-of-Function-Calls.ipynb  Video-Step-Output.ipynb
doc/: Jupyter_Notebook.ipynb  README.md  SoS-QuickStart.ipynb  StringInterpolation.ipynb  Using_SoS_with_IPython.ipynb  WorkflowSpecification.ipynb  actions.md  charts.pptx  commandline.md  cookbook.md  emit_input.md  examples.md  export.md  implementation.md  input_spec.md  problems.md  runtime_signature.md  sos_format_v1.md  step_format.md  step_options.pptx  var_options.md  variables.md  workflow_control.md  workflow_sections.md
doc/documentation/: Auxiliary_Steps.ipynb  Command_Line_Options.ipynb  Configuration_Files.ipynb  Extending_SoS.ipynb  External_task.ipynb  File_Structure.ipynb  SoS_Actions.ipynb  SoS_Kernel.ipynb  SoS_Step.ipynb  SoS_Syntax.ipynb  Step_Options.ipynb  Step_Process_and_External_Tasks.ipynb  StringInterpolation.ipynb  String_Interpolation.ipynb  User_Interface.ipynb  WorkflowSpecification.ipynb  Workflow_Specification.ipynb
doc/pending/: Configuration_Files.ipynb  Extending_SoS.ipynb  Function_Reference.ipynb  Overview_of_SoS.ipynb  Quick_Start_Guide.ipynb  SoS-QuickStart.ipynb  SoS_Syntax.ipynb  Step_Dependencies.ipynb  Step_Input.ipynb  Step_Options.ipynb  Step_Output.ipynb  UnderstandingTargets.ipynb  Using_SoS_with_VIM.ipynb
doc/tutorials/: A_Complete_Example.ipynb  SoS_Docker_Guide.ipynb  Using_SoS_with_Spyder.ipynb  Using_SoS_with_VIM.ipynb
docs/: README.md  index.html
docs/src/: media
examples/: NotebookTutorial.ipynb  example.ipynb  markdown.sos  rnaseq_tutorial.sos
misc/: patch_spyder.py  sos-detect.vim  sos.vim  sos_codemirror.js  sos_ipython_profile.py  sos_magic.py
misc/celery/: sos_task.py
misc/docker-base/: Dockerfile
misc/docker-full/: Dockerfile
misc/docker-notebook/: Dockerfile  README.md
misc/ipython/: Using_SoS_Interactively.ipynb  Using_SoS_with_IPython.ipynb  ipython_magic.py  sos_ipython_profile.py  test_ipython.py
misc/spyder/: Using_SoS_with_Spyder.ipynb  patch_spyder.py  spyder_kernel.py
misc/vim-ipython/: ipy.vim  vim_ipython.py
pysos/: __init__.py  _version.py  actions.py  celery.py  converter.py  dag.py  execute.py  kernel.py  main.py  monitor.py  pattern.py  preview.py  runtime.py  signature.py  sos_eval.py  sos_executor.py  sos_script.py  sos_show.py  sos_step.py  sos_syntax.py  specfile.py  target.py  utils.py
sos/: __init__.py  __main__.py  _version.py  actions.py  converter.py  dag.py  hosts.py  kernel.py  monitor.py  pattern.py  preview.py  remote.py  runtime.py  sos_eval.py  sos_executor.py  sos_script.py  sos_step.py  sos_syntax.py  sos_task.py  target.py  utils.py
sos-R/: setup.py
sos-R/sos-R/: kernel.py
sos-R/sos_R/: _version.py  kernel.py
sos-bioinfo/sos-bioinfo/: preview.py
sos/Bash/: actions.py  kernel.py
sos/JavaScript/: kernel.py
sos/New_Language_Template/: actions.py  kernel.py  target.py
sos/PBS/: sos_task.py
sos/Python/: actions.py  kernel.py  target.py
sos/Python2/: actions.py  kernel.py
sos/Python3/: actions.py  kernel.py  target.py
sos/R/: actions.py  kernel.py  target.py
sos/SAS/: actions.py  target.py
sos/addons/: patch_spyder.py
sos/bioinfo/: preview.py  setup.py
sos/celery/: celery.py  sos_executor.py  sos_step.py  sos_task.py
sos/docker/: actions.py  client.py
sos/jupyter/: completer.py  converter.py  inspector.py  kernel.js  kernel.py  preview.py  sos-full.tpl  sos-report.tpl  sos.tpl  sos_codemirror.js  sos_executor.py  sos_frontend.js  sos_magic.py  sos_step.py  spyder_kernel.py  visualize.py
sos/moab/: sos_executor.py  sos_step.py
sos/rq/: sos_executor.py  sos_step.py  sos_task.py
src/: converter.py  dag.py  sos_executor.py
src/Bash/: kernel.py
src/New_Language_Template/: kernel.py
src/R/: actions.py  target.py
src/SAS/: kernel.py
src/rq/: sos_task.py
src/sos/: __init__.py  __main__.py  _version.py  actions.py  actions_Bash.py  actions_JavaScript.py  actions_R.py  actions_bash.py  actions_javascript.py  actions_julia.py  actions_matlab.py  actions_python.py  actions_r.py  actions_ruby.py  client.py  controller.py  converter.py  dag.py  eval.py  executor_utils.py  functions.py  hosts.py  imports.py  install.py  messages.py  monitor.py  parser.py  pattern.py  preview.py  (+32 more)
test/: build_test_docker.sh  check_zombie.py  conftest.py  run_tests  run_tests.py  run_tests.sh  sample_workflow.ipynb  sostestcase.py  test_Julia_action.py  test_Python2_actions.py  test_Python3_actions.py  test_Python3_target.py  test_R_actions.py  test_R_target.py  test_actions.py  test_bash_actions.py  test_config.py  test_convert.py  test_dag.py  test_docker_actions.py  test_execute.py  test_execute_2.py  test_ipython.py  test_julia_action.py  test_kernel.py  test_matlab_action.py  test_nested.py  test_node_actions.py  test_octave_action.py  test_outcome.py  test_pack.py  test_parser.py  test_python2_actions.py  test_python3_actions.py  test_python3_target.py  test_queue.py  test_r_actions.py  test_r_targets.py  test_remote.py  test_remove.py  (+7 more)
website/: README.md  index.html
(+243 files in other folders)
